--- a/S1/Ejercicio_1.html
+++ b/S1/Ejercicio_1.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biografía</title>
+</head>
+<header>
+
+</header>
+<body>
+
+<h1>Esta es mi biografía</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quidem consequatur perspiciatis debitis libero facere nulla, expedita, est ipsam, mollitia rerum illo? Maiores aperiam atque labore doloremque eaque. At, impedit.</p>
+
+<div class="mis_gustos">
+    <h3>Mis gustos son:</h3>
+    <ul>
+        <li><a href="http://youtube.com">youtube</a></li>
+        <li><a href="http://instagram.com">instagram</a></li>
+        <li><a href="http://tetr.io">tetrisbattle</a></li>
+    </ul>
+</div>
+
+<div class="multimedia">
+
+    <img src="/fondo.jpg" alt="pared_colores_fondo" style="height: 400px; width: 400px;">
+    <video src="https://www.w3schools.com/html/mov_bbb.mp4" controls autoplay> conejito malo </video>
+</div>
+<div class="interoperabilidad"> <!--aquí metí todo en un div para poder controlar desde el Css-->
+
+    <h1>ejemplo de interoperabilidad</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi voluptate voluptatum quisquam obcaecati quod, quaerat amet, doloribus maiores nemo accusantium beatae quia voluptas quibusdam laudantium ullam nulla. Temporibus, incidunt nihil.</p>
+    <!--otro comentario-->
+    <!--el de arriba se emborracha haciendo un sancocho-->
+</div>
+<div class="form">
+    <span>Nombre</span><input type="text" name="name" id="name">
+      <span>Correo electronico</span><input type="email" name="name" id="name">
+    <button>Enviar</button>
+</div>
+</body>
+</html>
