--- a/S1/Ejercicio_1.html
+++ b/S1/Ejercicio_1.html
@@ -25,7 +25,7 @@
 
 <div class="multimedia">
 
-    <img src="/fondo.jpg" alt="pared_colores_fondo" style="height: 400px; width: 400px;">
+    <img src="source/fondo.jpg" alt="pared_colores_fondo" style="height: 400px; width: 400px;">
     <video src="https://www.w3schools.com/html/mov_bbb.mp4" controls autoplay> conejito malo </video>
 </div>
 <div class="interoperabilidad"> <!--aquí metí todo en un div para poder controlar desde el Css-->
